Completamento Test e definizione Descrizione
Completato il file test di prenotazione ed implementato in swagger la documentazione
